--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "latest",
     "file-loader": "^0.11.0",
+    "html-loader": "^0.4.5",
+    "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "nodemon": "^1.11.0",
